aks/wordpress-manifests/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db
spec:
  ports:
  - name: mariadb
    port: 3306
    targetPort: 3306
    protocol: TCP
  selector:
    app: mariadb
